[package]
edition = "2018"
name = "daytime"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["client"]

[dependencies]
async-trait = "0.1"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
# miette = "1"
# libc = "0.2"
strum = {version = "0.21", features = ["derive"]}
tokio = {version = "1", features = ["io-util", "macros", "rt-multi-thread", "net", "sync", "signal"]}
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"
