[package]
edition = "2018"
name = "daytime"
publish = false
version = "0.1.1-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
allow-branch = ["main"]
disable-push = true
post-release-commit-message = "chore(cargo-release): start next development iteration {{next_version}}"
pre-release-commit-message = "chore(cargo-release): release {{version}}"
sign-commit = true
sign-tag = true

[workspace]
members = ["client"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = "3.0.0-beta.4"
futures-util = "0.3"
strum = {version = "0.21", features = ["derive"]}
tokio = {version = "1", features = ["io-util", "macros", "rt-multi-thread", "net", "sync", "signal"]}
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
